intermediate commit and add burger menu

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,11 +7,18 @@
         <title>DevCorp</title>
         <link rel="stylesheet" href="./styles/main.min.css" />
         <link rel="stylesheet" href="./styles/normalize.css" />
-        <script src="js/main.js"></script>
     </head>
     <body class="body">
         @@include('components/header.html')
-        <main>home</main>
-        @@include('components/footer.html')
+        <main>
+            <!-- @@include('components/pageHome/heading.html')
+                @@include('components/pageHome/opportunities.html')
+                @@include('components/pageHome/projectsCompany.html')
+                @@include('components/pageHome/project.html')
+                @@include('components/pageHome/founders.html')
+                @@include('components/pageHome/network.html') -->
+        </main>
+            <!-- @@include('components/footer.html') -->
+        <script src="./scripts/main.js"></script>
     </body>
 </html>
