--- a/src/pages/social-network.html
+++ b/src/pages/social-network.html
@@ -7,11 +7,11 @@
         <title>DevCorp social network</title>
         <link rel="stylesheet" href="./styles/main.min.css" />
         <link rel="stylesheet" href="./styles/normalize.css" />
-        <script src="js/main.js"></script>
     </head>
     <body class="body">
         @@include('components/header.html')
         <main>Social network</main>
         @@include('components/footer.html')
+        <script src="scripts/main.js"></script>
     </body>
 </html>
