modified component footer

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./styles/normalize.css" />
     </head>
     <body class="body">
-        @@include('components/header.html')
+            @@include('components/header.html')
         <main>
             <!-- @@include('components/pageHome/heading.html')
                 @@include('components/pageHome/opportunities.html')
@@ -18,7 +18,7 @@
                 @@include('components/pageHome/founders.html')
                 @@include('components/pageHome/network.html') -->
         </main>
-            <!-- @@include('components/footer.html') -->
+            @@include('components/footer.html')
         <script src="./scripts/main.js"></script>
     </body>
 </html>
