--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,12 +11,12 @@
     <body class="body">
             @@include('components/header.html')
         <main>
-            <!-- @@include('components/pageHome/heading.html')
-                @@include('components/pageHome/opportunities.html')
-                @@include('components/pageHome/projectsCompany.html')
-                @@include('components/pageHome/project.html')
-                @@include('components/pageHome/founders.html')
-                @@include('components/pageHome/network.html') -->
+            <!-- @@include('components/pageHome/heading.html') -->
+            @@include('components/pageHome/opportunities.html')
+            <!-- @@include('components/pageHome/projectsCompany.html') -->
+            <!-- @@include('components/pageHome/project.html') -->
+            <!-- @@include('components/pageHome/founders.html') -->
+            <!-- @@include('components/pageHome/network.html') -->
         </main>
             @@include('components/footer.html')
         <script src="./scripts/main.js"></script>
