--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>DevCorp</title>
-        <link rel="stylesheet" href="./styles/main.min.css" />
-        <link rel="stylesheet" href="./styles/normalize.css" />
-    </head>
+    @@include('components/head.html', {
+        title: 'DevCorp'
+    })
     <body class="body">
         @@include('components/header.html')
         <main>
