added file commonomponent for header, footer, head and fixed paths

--- a/src/pages/founders.html
+++ b/src/pages/founders.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-    @@include('components/head.html', {
+    @@include('components/commonСomponents/head.html', {
         title: 'DevCorp Founders'
     })
     <body class="body">
-        @@include('components/header.html')
+        @@include('components/commonСomponents/header.html')
         <main>Founders</main>
-        @@include('components/footer.html')
+        @@include('components/commonСomponents/footer.html')
     </body>
 </html>
