--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-    @@include('components/head.html', {
+    @@include('components/commonСomponents/head.html', {
         title: 'DevCorp'
     })
     <body class="body">
-        @@include('components/header.html')
+        @@include('components/commonСomponents/header.html')
         <main>
             <!-- @@include('components/pageHome/heading.html') -->
             @@include('components/pageHome/opportunities.html')
@@ -13,6 +13,6 @@
             @@include('components/pageHome/founders.html')
             @@include('components/pageHome/network.html')
         </main>
-        @@include('components/footer.html')
+        @@include('components/commonСomponents/footer.html')
     </body>
 </html>
