--- a/src/pages/about-project.html
+++ b/src/pages/about-project.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-    @@include('components/head.html', {
+    @@include('components/commonСomponents/head.html', {
         title: 'DevCorp about project'
     })
     <body class="body">
-        @@include('components/header.html')
+        @@include('components/commonСomponents/header.html')
         <main>about-project</main>
-        @@include('components/footer.html')
+        @@include('components/commonСomponents/footer.html')
     </body>
 </html>
