--- a/src/pages/social-network.html
+++ b/src/pages/social-network.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-    @@include('components/head.html', {
+    @@include('components/commonСomponents/head.html', {
         title: 'DevCorp social network'
     })
     <body class="body">
-        @@include('components/header.html')
+        @@include('components/commonСomponents/header.html')
         <main>Social network</main>
-        @@include('components/footer.html')
+        @@include('components/commonСomponents/footer.html')
     </body>
 </html>
