added components for about project

--- a/src/pages/about-project.html
+++ b/src/pages/about-project.html
@@ -5,7 +5,12 @@
     })
     <body class="body">
         @@include('components/commonСomponents/header.html')
-        <main>about-project</main>
+        <main>
+            @@include('components/pageAboutProducts/aboutProducts.html')
+            @@include('components/pageAboutProducts/purposesAndMission.html')
+            @@include('components/pageAboutProducts/aboutCommunity.html')
+            @@include('components/pageAboutProducts/ourPlans.html')
+        </main>
         @@include('components/commonСomponents/footer.html')
     </body>
 </html>
