added component for products

--- a/src/pages/products.html
+++ b/src/pages/products.html
@@ -5,7 +5,10 @@
     })
     <body class="body">
         @@include('components/commonСomponents/header.html')
-        <main>Products</main>
+        <main>
+            @@include('components/pageProducts/invoc.html')
+            @@include('components/pageProducts/discordCommunity.html')
+        </main>
         @@include('components/commonСomponents/footer.html')
     </body>
 </html>
