added component for pageSocilNetwork

--- a/src/pages/social-network.html
+++ b/src/pages/social-network.html
@@ -5,7 +5,11 @@
     })
     <body class="body">
         @@include('components/commonСomponents/header.html')
-        <main>Social network</main>
+        <main>
+            @@include('components/pageSocilNetwork/tiktok.html')
+            @@include('components/pageSocilNetwork/instagram.html')
+            @@include('components/pageSocilNetwork/telegram.html')
+        </main>
         @@include('components/commonСomponents/footer.html')
     </body>
 </html>
