--- a/src/pages/founders.html
+++ b/src/pages/founders.html
@@ -5,7 +5,9 @@
     })
     <body class="body">
         @@include('components/commonСomponents/header.html')
-        <main>Founders</main>
+        <main>
+            @@include('components/pageFounders/swiperFounders.html')
+        </main>
         @@include('components/commonСomponents/footer.html')
     </body>
 </html>
