--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
     <body class="body">
         @@include('components/commonСomponents/header.html')
         <main>
-            <!-- @@include('components/pageHome/heading.html') -->
+            @@include('components/pageHome/heading.html')
             @@include('components/pageHome/opportunities.html')
             @@include('components/pageHome/projectsCompany.html')
             @@include('components/pageHome/project.html')
