modified components opportunities

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
         @@include('components/commonСomponents/header.html')
         <main>
             <!-- @@include('components/pageHome/heading.html') -->
-            <!-- @@include('components/pageHome/opportunities.html') -->
+            @@include('components/pageHome/opportunities.html')
             <!-- @@include('components/pageHome/projectsCompany.html') -->
             <!-- @@include('components/pageHome/project.html') -->
             <!-- @@include('components/pageHome/founders.html') -->
