modified components projects-company

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@
         <main>
             <!-- @@include('components/pageHome/heading.html') -->
             @@include('components/pageHome/opportunities.html')
-            <!-- @@include('components/pageHome/projectsCompany.html') -->
+            @@include('components/pageHome/projectsCompany.html')
             <!-- @@include('components/pageHome/project.html') -->
             <!-- @@include('components/pageHome/founders.html') -->
             <!-- @@include('components/pageHome/network.html') -->
