adaptation for components founders, network, project

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,12 +6,12 @@
     <body class="body">
         @@include('components/commonСomponents/header.html')
         <main>
-            <!-- @@include('components/pageHome/heading.html') -->
+            @@include('components/pageHome/heading.html')
             @@include('components/pageHome/opportunities.html')
             @@include('components/pageHome/projectsCompany.html')
-            <!-- @@include('components/pageHome/project.html') -->
-            <!-- @@include('components/pageHome/founders.html') -->
-            <!-- @@include('components/pageHome/network.html') -->
+            @@include('components/pageHome/project.html')
+            @@include('components/pageHome/founders.html')
+            @@include('components/pageHome/network.html')
         </main>
         @@include('components/commonСomponents/footer.html')
     </body>
