modified project for mobail

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,9 +6,9 @@
     <body class="body">
         @@include('components/commonСomponents/header.html')
         <main>
-            @@include('components/pageHome/heading.html')
-            @@include('components/pageHome/opportunities.html')
-            @@include('components/pageHome/projectsCompany.html')
+            <!-- @@include('components/pageHome/home.html') -->
+            <!-- @@include('components/pageHome/opportunities.html') -->
+            <!-- @@include('components/pageHome/projectsCompany.html') -->
             @@include('components/pageHome/project.html')
             @@include('components/pageHome/founders.html')
             @@include('components/pageHome/network.html')
